feat(oauth): enhance GitHub OAuth flow with frontend URL support